exports[`getEmitterPorts return a map with port id2 && id4 1`] = `
Object {
  "id2": Object {
    "data": Object {
      "flowType": undefined,
      "properties": Object {},
    },
    "getIndex": [Function],
    "getPortDirection": [Function],
    "getPortFlowType": [Function],
    "getPortType": [Function],
    "getPosition": [Function],
    "graphicalAttributes": Object {
      "properties": Object {
        "type": "SOURCE",
      },
    },
    "id": "id2",
    "nodeId": "nodeId1",
    "setIndex": [Function],
    "setPosition": [Function],
  },
  "id4": Object {
    "data": Object {
      "flowType": undefined,
      "properties": Object {},
    },
    "getIndex": [Function],
    "getPortDirection": [Function],
    "getPortFlowType": [Function],
    "getPortType": [Function],
    "getPosition": [Function],
    "graphicalAttributes": Object {
      "properties": Object {
        "type": "SOURCE",
      },
    },
    "id": "id4",
    "nodeId": "nodeId2",
    "setIndex": [Function],
    "setPosition": [Function],
  },
}
`;

exports[`getEmitterPortsForNode return a map with port id2 1`] = `
Object {
  "id2": Object {
    "data": Object {
      "flowType": undefined,
      "properties": Object {},
    },
    "getIndex": [Function],
    "getPortDirection": [Function],
    "getPortFlowType": [Function],
    "getPortType": [Function],
    "getPosition": [Function],
    "graphicalAttributes": Object {
      "properties": Object {
        "type": "SOURCE",
      },
    },
    "id": "id2",
    "nodeId": "nodeId1",
    "setIndex": [Function],
    "setPosition": [Function],
  },
}
`;

exports[`getSinkPorts return a map with port id1 & id3 1`] = `
Object {
  "id1": Object {
    "data": Object {
      "flowType": undefined,
      "properties": Object {},
    },
    "getIndex": [Function],
    "getPortDirection": [Function],
    "getPortFlowType": [Function],
    "getPortType": [Function],
    "getPosition": [Function],
    "graphicalAttributes": Object {
      "properties": Object {
        "type": "SINK",
      },
    },
    "id": "id1",
    "nodeId": "nodeId1",
    "setIndex": [Function],
    "setPosition": [Function],
  },
  "id3": Object {
    "data": Object {
      "flowType": undefined,
      "properties": Object {},
    },
    "getIndex": [Function],
    "getPortDirection": [Function],
    "getPortFlowType": [Function],
    "getPortType": [Function],
    "getPosition": [Function],
    "graphicalAttributes": Object {
      "properties": Object {
        "type": "SINK",
      },
    },
    "id": "id3",
    "nodeId": "nodeId2",
    "setIndex": [Function],
    "setPosition": [Function],
  },
}
`;
